cmake_minimum_required(VERSION 3.21)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode
        c++/0001-Two-Sum/main.cpp
        c++/0001-Two-Sum/main1.cpp
        c++/0002-Add-Two-Numbers/main.cpp
        c++/0003-Longest-Substring-Without-Repeating/main.cpp
        c++/0003-Longest-Substring-Without-Repeating/main1.cpp
        c++/0004-Median-Of-Two-Sorted-Arrays/main.cpp
        c++/0004-Median-Of-Two-Sorted-Arrays/main1.cpp
        c++/0005-Longest-Palindromic-Substring/main.cpp
        c++/0005-Longest-Palindromic-Substring/main1.cpp
        c++/0006-Z/main.cpp
        c++/0007-reverse-Interger/main.cpp
        c++/0011-Container-With-Most-Water/main.cpp
        c++/0012-Integer-to-Roman/main.cpp
        c++/0014-Longest-Common-Prefix/main.cpp)
